Buggy: fix newURL with access parameter